環境構築修正

--- a/0100環境構築.md
+++ b/0100環境構築.md
@@ -1,17 +1,37 @@
 # IISの設定
+**【重要】Magic xpa をインストールする前にIISの導入･設定をお願いいたします。**
+https://www.magicsoftware.co.jp/service/support/manual/magicxpa4/Install.pdf
+の82ページを参照してください。
 
 # Magicのインストール
+
+https://www.magicsoftware.co.jp/service/support/manual/magicxpa4/Install.pdf
+の13ページを参照してください。
+
 
 # コマンドライン
 npm i –g npm
 
 **npm config set legacy-peer-deps true** ← とっても忘れがち
 
+
 # プロジェクトフォルダの作成
+\プロジェクト名\mg\の中にシステムを構築してください。
 
 # Magicプロジェクトの作成
+\プロジェクト名\mg\の中にプロジェクトを構築してください。
+
+ezoプロジェクトならば
+
+\ezo\mg\ezo.edpが来ます。
+
+# 差分iniファイルの作成
+
+# ショートカットの作成
 
 # メインフォルダの作成
+
+
 
 # メインルーティングの作成
 
