--- a/0100環境構築.md
+++ b/0100環境構築.md
@@ -27,7 +27,46 @@ ezoプロジェクトならば
 
 # 差分iniファイルの作成
 
+\プロジェクト名\mg\プロジェクト名.iniを作成します。
+
+例) C:\user\ezo\mg\ezo.ini
+
+詳しくはヘルプの
+
+ホーム > Magic xpa 逆引き辞典 > 開発環境 > Magc.ini の環境情報を追加指定するには
+
+内容例)
+
+```ini
+;デフォルトプロジェクト
+/DefaultProject   = C:\user\ezo\mg\ezo.edp
+/StartApplication = C:\user\ezo\mg\ezo.ecf
+
+;デフォルトデータベース
+/DefaultDatabase = ezo
+;MSSQL設定(Windows認証)
+/[MAGIC_DATABASES]ezo = DBMS, 21, ezo, , MSJ-WS-01, ,,, NoMagicRecordL+
+ock, ChangeFileInToolkit, CheckDefinition, CheckKey, NoFileLocks, , , +
+CheckExist, 0, , NoAS400SrvrSort,
+;論理名
+/[MAGIC_LOGICAL_NAMES]ExecEnv=C:\\user\\ezo\\mg\\ExecEnv\\
+```
+
+
+
+
+
 # ショートカットの作成
+オーバライドを使用する
+
+次に、Magic xpa Studio 起動時にこの設定ファイルを読み込ませる指定が必要です。以下の構文で指定します。
+
+Magic xpa.exe file @Override File Name
+
+例えば以下のように設定できます。
+
+"C:\Program Files\Magic xpa\Studio\MgxpaStudio.exe" C:\user\ezo\mg\ezo.ini
+
 
 # メインフォルダの作成
 
