--- a/0100環境構築.md
+++ b/0100環境構築.md
@@ -69,8 +69,13 @@ Magic xpa.exe file @Override File Name
 
 
 # メインフォルダの作成
+![](imgs/image.png.png)
 
+フォルダを作成します。名前をCommonとします。
 
+![](imgs/2023-06-02-16-30-51.png)
+
+**Webモジュール**だけにチェックを付けます。
 
 # メインルーティングの作成
 
