--- a/0700Git.md
+++ b/0700Git.md
@@ -1,5 +1,9 @@
 # 新規プロジェクトを作成する
-## GitHub
+
+まずはヘルプのホワイトペーパー→Magic xpaをGitリポジトリに接続の説明を読むとわかりやすいです。
+
+## GitHubでのプロジェクトの作成方法
+
 Magicxpa用とAngular用のプログラムを作成します。
 
 https://github.com/〇〇〇 へ移動する
@@ -33,28 +37,6 @@ Repository nameを[プロジェクト名+Magic]とします。
 
 新規プロジェクトの場合は[0100環境構築]('0100環境構築.md')を読んでください。
 
-![](imgs/2023-06-12-21-10-46.png)
-
-プロジェクト名 mg
-
-ローカルファイルのフォルダ 
-
-例) C:\user\プロジェクト名
-
-## プロジェクトをGithubへアップする
-
-![](imgs/2023-06-12-21-15-06.png)
-
-リポジトリを作成
-
-![](imgs/2023-06-12-21-15-50.png)
-
-![](imgs/2023-06-12-21-16-58.png)
-
-### Compaire & Mergeユーティリティの設定
-
-![](imgs/2023-06-12-21-17-51.png)
-
 設定ボタンをクリックして
 
 **C:\Program Files (x86)\Magic Compare 4\merge.exe**
@@ -62,17 +44,74 @@ Repository nameを[プロジェクト名+Magic]とします。
 を指定する。
 
 
-
 [Getting Started with Gitの**P13**からお読みください]('https://devnet.magicsoftware.co.jp/images/skillup/magic/download/xpa4/Getting_Started_with_Magic_Git.pdf')
 
-![](imgs/2023-06-12-21-55-04.png)
+### PowerShellなどコマンドラインにて
 
-Gitリポジトリのクローンを選択
+Magicの mg.edp が存在するフォルダへ移動して
 
-URL:
+git remote add origin https://github.com/ezostyle/MSJTest.git
+
+これでGitの接続性がすべてクリアになっているかと思います。
+
+![](imgs/2023-06-12-22-41-19.png)
+
+Magicを起動すると次のメッセージがでますのでOKを押してください。
+
+![](imgs/2023-06-13-06-30-07.png)
 
 
+## masterブランチを作成します
 
-![](imgs/2023-06-12-21-58-18.png)
+![](imgs/2023-06-13-06-32-52.png)
 
-![](imgs/2023-06-12-22-00-32.png)
+
+## Git Flowの構築
+
+一度コミットする
+
+![](imgs/2023-06-13-01-31-30.png)
+
+![](imgs/2023-06-13-01-32-06.png)
+
+
+プッシュします
+
+![](imgs/2023-06-13-06-04-40.png)
+
+![](imgs/2023-06-13-06-05-25.png)
+
+masterブランチとdevelopブランチをGithubにて作成します
+
+https://github.com/グループ名/プロジェクト名/branches
+
+![](imgs/2023-06-13-06-37-03.png)
+
+New branchをクリックします。
+
+![](imgs/2023-06-13-06-37-44.png)
+
+**同様にdevelopも作成します**
+
+GitFlowの初期化を行う
+
+![](imgs/2023-06-13-01-29-18.png)
+
+## githubにある既存のシステムと同期をとる
+
+プロジェクト名 / mgフォルダと
+
+プロジェクト名 / ngフォルダを構築する
+
+バージョン管理→Gitリポジトリのクローンを選択する
+
+![](imgs/2023-06-13-08-48-45.png)
+
+gitHubに設定されているURLと同期先を設定します。
+developブランチと同期を取ります。
+
+![](imgs/2023-06-13-08-54-44.png)
+
+同期がとられました
+
+![](imgs/2023-06-13-08-55-55.png)
