--- a/0700Git.md
+++ b/0700Git.md
@@ -1,6 +1,6 @@
 # 新規プロジェクトを作成する
 
-まずはヘルプのホワイトペーパー→Magic xpaをGitリポジトリに接続の説明を読むとわかりやすいです。
+まずはヘルプの「ホワイトペーパー」→「Magic xpaをGitリポジトリに接続」の説明を読むとわかりやすいです。
 
 ## GitHubでのプロジェクトの作成方法
 
