--- a/0100環境構築.md
+++ b/0100環境構築.md
@@ -16,20 +16,17 @@ npm i –g npm
 
 
 # プロジェクトフォルダの作成
-\プロジェクト名\mg\の中にシステムを構築してください。
+![](images/2023-08-20-17-12-13.png)
+例)C:\userにetupirkaプロジェクトを構築します。
 
-# Magicプロジェクトの作成
-\プロジェクト名\mg\の中にプロジェクトを構築してください。
 
-ezoプロジェクトならば
 
-\ezo\mg\ezo.edpが来ます。
 
-# 差分iniファイルの作成
+# オーバライドiniファイルの作成
 
-\プロジェクト名\mg\プロジェクト名.iniを作成します。
+\プロジェクト名\プロジェクト名.iniを作成します。
 
-例) C:\user\ezo\mg\ezo.ini
+例) C:\user\etupirka\etupirka.ini
 
 詳しくはヘルプの
 
@@ -39,22 +36,18 @@ ezoプロジェクトならば
 
 ```ini
 ;デフォルトプロジェクト
-/DefaultProject   = C:\user\ezo\mg\ezo.edp
-/StartApplication = C:\user\ezo\mg\ezo.ecf
+/DefaultProject   = C:\user\etupirka\etupirka.edp
+/StartApplication = C:\user\etupirka\etupirka.ecf
 
 ;デフォルトデータベース
-/DefaultDatabase = ezo
+/DefaultDatabase = etupirka
 ;MSSQL設定(Windows認証)
-/[MAGIC_DATABASES]ezo = DBMS, 21, ezo, , MSJ-WS-01, ,,, NoMagicRecordL+
+/[MAGIC_DATABASES]etupirka = DBMS, 21, etupirka, , MSJ-WS-01, ,,, NoMagicRecordL+
 ock, ChangeFileInToolkit, CheckDefinition, CheckKey, NoFileLocks, , , +
 CheckExist, 0, , NoAS400SrvrSort,
 ;論理名
-/[MAGIC_LOGICAL_NAMES]ExecEnv=C:\\user\\ezo\\mg\\ExecEnv\\
+/[MAGIC_LOGICAL_NAMES]ExecEnv=C:\\user\\etupirka\\etupirka\\
 ```
-
-
-
-
 
 # ショートカットの作成
 オーバライドを使用する
@@ -65,7 +58,7 @@ Magic xpa.exe file @Override File Name
 
 例えば以下のように設定できます。
 
-"C:\Program Files\Magic xpa\Studio\MgxpaStudio.exe" C:\user\ezo\mg\ezo.ini
+"C:\Program Files\Magic xpa\Studio\MgxpaStudio.exe" C:\user\etupirka\etupirka.ini
 
 
 # メインフォルダの作成
@@ -76,14 +69,39 @@ Magic xpa.exe file @Override File Name
 ![](imgs/2023-06-02-16-30-51.png)
 
 **Webモジュール**だけにチェックを付けます。
+オンデマンドに関しては外します。
 
 # メインルーティングの作成
+![](images/2023-08-20-17-31-12.png)
+
+MainRoutingにはイベント「ルート」を追加します。
+
+![](images/2023-08-20-17-40-29.png)
+
+サブフォームを追加しルーターアウトレット「True」、デフォルトアウトレット「True」を設定します。
+
+このサブフォーム内に各プログラムが表示され動きます。
+
+![](images/2023-08-20-17-55-14.png)
+
 
 
 
 
 ## Webアプリケーションの設定
-![](imgs/2023-06-01-15-16-20.png)
+![](images/2023-08-20-18-22-18.png)
 Webプロジェクト名 **ng**
-Webアプリケーションフォルダ **..**
+Webアプリケーションフォルダ **.**
 テーマ マテリアル
+
+スタートアッププログラムに先ほど追加したMainRoutingプログラムを指定します。
+![](images/2023-08-20-18-24-07.png)
+
+
+ここでWebアプリケーションの作成を行います。
+![](images/2023-08-20-18-36-22.png)
+
+
+user\etupirkaフォルダの下にAngularのngフォルダが出来ています。
+
+
