--- a/0100環境構築.md
+++ b/0100環境構築.md
@@ -80,7 +80,7 @@ MainRoutingにはイベント「ルート」を追加します。
 
 サブフォームを追加しルーターアウトレット「True」、デフォルトアウトレット「True」を設定します。
 
-このサブフォーム内に各プログラムが表示され動きます。
+## このサブフォーム内に各プログラムが表示されて動きます。
 
 ![](images/2023-08-20-17-55-14.png)
 
